fix typos in README and modify notes in notebook

--- a/SVM_HARD.ipynb
+++ b/SVM_HARD.ipynb
@@ -7,8 +7,12 @@
     "# Implement hard-margin SVM with QP by cvxopt\n",
     "Author: Yin-tao Xu | Date: 2018/9/10\n",
     "## Part0: Introduction\n",
-    "[Hard-Margin SVM](https://en.wikipedia.org/wiki/Support_vector_machine#Hard-margin) can be transformed into a standard [QP problem](https://en.wikipedia.org/wiki/Quadratic_programming). For beginners or researchers focusing on application, it is challenging to implement very detailed numerical optimization method. One way is to transmute this question into a more well-studied and basic optimization problem. Rely on magic boxes in cvxopt package, you are able to derive the solution with only one command! \n",
+    "[Hard-Margin SVM](https://en.wikipedia.org/wiki/Support_vector_machine#Hard-margin) can be transformed into a standard [QP problem](https://en.wikipedia.org/wiki/Quadratic_programming). For beginners or researchers focusing on application, it is challenging to implement very detailed numerical optimization method. \n",
+    "\n",
+    "One way is to transmute this question into a more well-studied and basic optimization problem. Rely on magic boxes in cvxopt package, you are able to derive the solution with only one command! \n",
+    "\n",
     "From my POV, experiencing the process of the modeling of hard-margin SVM is required for machine learning beginners since it could be one of your gates to the theory of machine learning. Simutaneously, it also works very well in most cases.\n",
+    "\n",
     "### 0.1 Prerequisite\n",
     "1. Get familiar with the basic modeling of the hard-margin SVM.\n",
     "2. Get familiar with the idea of how to transforming into a QP-Problem\n",
@@ -20,7 +24,7 @@
     "\n",
     "**Note**: For notes in standford, first 7 pages will provide you with enough background knowledge about SVM(before lagrange duality). It's quite easy to transform the optimization problem into QP standard form if you have basic knowledge of linear algebra. \n",
     "\n",
-    "and Chinese([author's CSDN blog](https://blog.csdn.net/liubai01/article/details/82017964)). Give me a 'Like!' if you love this tutorial.\n",
+    "and Chinese([author's CSDN blog](https://blog.csdn.net/liubai01/article/details/82017964)).\n",
     "\n",
     "### 0.2 Self-check, SVM optimization objective function\n",
     "To help you recall the knowledge of support vector mechine(SVM), here is the formulation of a basic SVM problem.\n",
@@ -203,14 +207,14 @@
     "\\textbf{G}=\n",
     " \\left[\n",
     " \\begin{matrix}\n",
-    "   y_1 & -y_1\\textbf{x}_1^T- \\\\\n",
-    "   y_2 & -y_2\\textbf{x}_2^T- \\\\\n",
+    "   -y_1 & -y_1\\textbf{x}_1^T \\\\\n",
+    "   -y_2 & -y_2\\textbf{x}_2^T \\\\\n",
     "   \\vdots & \\vdots \\\\\n",
-    "   y_N & -y_N\\textbf{x}_2^T- \\\\\n",
+    "   -y_N & -y_N\\textbf{x}_2^T \\\\\n",
     "  \\end{matrix}\n",
     " \\right]\n",
     ",\n",
-    "\\textbf{h}=\\textbf{1}_N\n",
+    "\\textbf{h}=-\\textbf{1}_N\n",
     "$$"
    ]
   },
